# animation-tutorial-demo

./: .gitignore  CMakeLists.txt  Logger.h  Window.cpp  Window.h  main.cpp
renderer/: Framebuffer.cpp  Framebuffer.h  GltfAnimationChannel.cpp  GltfAnimationChannel.h  GltfAnimationClip.cpp  GltfAnimationClip.h  GltfInstance.cpp  GltfInstance.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h  IKSolver.cpp  IKSolver.h  Mesh.cpp  Mesh.h  ModelSettings.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UserInterface.cpp  UserInterface.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
shader/: gltf.frag  gltf.vert  gltf_dqs.vert  triangle.frag  triangle.vert
tools/: Camera.cpp  Camera.h  Timer.cpp  Timer.h
